Fixing visibility

--- a/src/components/home/styles.css
+++ b/src/components/home/styles.css
@@ -119,7 +119,7 @@
 	}
 
 	.profession{
-		font-size: 1.4rem;
+		font-size: 1.2rem;
 		margin-top: 0px;
 		text-shadow: none;
 	}
