--- a/src/index.css
+++ b/src/index.css
@@ -22,7 +22,7 @@ main {
   height: 90vh;
 }
 
-h1, h2, h3{
+h1, h2 {
   font-family: 'Russo One', sans-serif;
   text-shadow: 4px 4px black;
 }
